vlib/v/parser/tests/fn_decl_multi_return_types_err.vv
fn main() {
}

fn foo() int, int {
	return 0, 0
}
